Fixed spacing issues with the product scroll

--- a/large-media.css
+++ b/large-media.css
@@ -319,9 +319,8 @@ main{
 }
 
 .product-scroll{
-	height: 33rem;
+	height: 36rem;
 	display: flex;
-	overflow: auto;
 	white-space: nowrap;
 }
 ::-webkit-scrollbar{
@@ -330,11 +329,9 @@ main{
 
 .product-container{
     width: 225px;
-    margin: 1rem 2rem 100px 0;
 	flex-shrink: 0;
 }
 .product-img-container{
-    height: 345px;
     border: 1px solid black;
     display: flex;
     justify-content: center;
@@ -344,6 +341,7 @@ main{
     width: 100%;
 	object-fit: cover;
 }
+
 
 .motion-img {
 	border: 1px solid black;
@@ -375,7 +373,7 @@ main{
 }
 .description {
 	width: 14.0625rem;
-	height: 2.53913rem;
+	height: 5rem;
 	text-wrap: wrap;
 	color: #000;
 	font-family: var(--ibm-plex);
@@ -389,7 +387,6 @@ main{
 
 .description.open {
 	opacity: 1;
-	max-height: 200px; /* enough room for content */
 	transition: max-height 0.25s ease-in, opacity 0.2s ease-in;
 }
 
@@ -397,7 +394,9 @@ main{
 .description p {
 	margin: 0;
 	padding-top: 1rem;
+	height: 5;
 }
+
 
 
 /*Tech section*/
@@ -631,8 +630,7 @@ input#email::placeholder {
 	.product-scroll{
 		width: 100%;
 		gap: 2rem;
-		overflow: auto;
-		white-space: unset;
+		overflow: visible;
 		justify-content: space-between;
 	}
 
@@ -643,8 +641,7 @@ input#email::placeholder {
 
 	.product-img-container{
 		width: 100%;
-		min-height: 345px;
-;
+		aspect-ratio: 1 / 2;
 	}
 	
 } 
