--- a/style.css
+++ b/style.css
@@ -361,8 +361,9 @@ input#searchInput::placeholder {
 .product-scroll{
 	height: 33rem;
 	display: flex;
-	overflow: auto;
+	overflow-x: scroll;
 	white-space: nowrap;
+	padding-bottom: 10rem;
 }
 ::-webkit-scrollbar{
 	display: none;
@@ -370,11 +371,12 @@ input#searchInput::placeholder {
 
 .product-container{
     width: 225px;
-    margin: 1rem 2rem 100px 0;
+    margin: 1rem 2rem 0 0;
 	flex-shrink: 0;
 }
 .product-img-container{
     height: 345px;
+	aspect-ratio: 1 / 1.5;
     border: 1px solid black;
     display: flex;
     justify-content: center;
